Fix extra margin for larger viewports in SiwG settings.

--- a/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-settings-module.scss
+++ b/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-settings-module.scss
@@ -97,6 +97,10 @@
 				.mdc-layout-grid {
 					.mdc-layout-grid__inner {
 						margin-bottom: $grid-gap-desktop;
+
+						@media (min-width: $bp-xlarge) {
+							margin-bottom: 0;
+						}
 					}
 				}
 
